--- a/.jshintrc
+++ b/.jshintrc
@@ -2,5 +2,6 @@
     "predef": [ "document", "console", "jquery", "module", "require", "angular"],
     "esversion": 6,
     "globalstrict": true,
-    "jquery": true
+    "jquery": true,
+    "app": true
   }
