Arbitrary stop place

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,7 +1,6 @@
     {
-    "predef": [ "document", "console", "jquery", "module", "require", "angular"],
+    "predef": [ "document", "app", "console", "jquery", "module", "require", "angular"],
     "esversion": 6,
     "globalstrict": true,
-    "jquery": true,
-    "app": true
+    "jquery": true
   }
