--- a/lib/package.json
+++ b/lib/package.json
@@ -1,12 +1,13 @@
 {
   "name": "lib",
   "version": "1.0.0",
-  "description": "",
   "main": "gulpfile.js",
   "dependencies": {
     "angular": "^1.5.5",
     "angular-route": "^1.5.5",
+    "angularfire": "^1.2.0",
     "bootstrap": "^3.3.6",
+    "firebase": "^3.0.3",
     "gulp": "^3.9.1",
     "gulp-jshint": "^2.0.1",
     "gulp-sass": "^2.3.1",
@@ -22,5 +23,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
